// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button Component should render as a link when the to prop is present 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Button
    to="/"
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {
      "to": "/",
    },
    "ref": null,
    "rendered": null,
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "to": "/",
      },
      "ref": null,
      "rendered": null,
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;

exports[`Button Component should render without throwing an error 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Button />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {},
    "ref": null,
    "rendered": null,
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {},
      "ref": null,
      "rendered": null,
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;

exports[`ButtonStyled Component should properly utilize the block prop 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <ThemeProvider
    theme={
      Object {
        "breakpoints": Array [
          32,
          48,
          81,
          100,
        ],
        "colors": Object {
          "danger": "#f44336",
          "danger-d-1": "#f32c1e",
          "danger-d-10": "#290502",
          "danger-d-11": "#110201",
          "danger-d-12": "#000",
          "danger-d-13": "#000",
          "danger-d-14": "#000",
          "danger-d-15": "#000",
          "danger-d-16": "#000",
          "danger-d-17": "#000",
          "danger-d-18": "#000",
          "danger-d-19": "#000",
          "danger-d-2": "#ea1c0d",
          "danger-d-3": "#d2190b",
          "danger-d-4": "#ba160a",
          "danger-d-5": "#a21309",
          "danger-d-6": "#891008",
          "danger-d-7": "#710e06",
          "danger-d-8": "#590b05",
          "danger-d-9": "#410804",
          "danger-l-1": "#f55a4e",
          "danger-l-10": "#fff",
          "danger-l-11": "#fff",
          "danger-l-12": "#fff",
          "danger-l-13": "#fff",
          "danger-l-14": "#fff",
          "danger-l-15": "#fff",
          "danger-l-16": "#fff",
          "danger-l-17": "#fff",
          "danger-l-18": "#fff",
          "danger-l-19": "#fff",
          "danger-l-2": "#f77066",
          "danger-l-3": "#f8877f",
          "danger-l-4": "#f99d97",
          "danger-l-5": "#fbb4af",
          "danger-l-6": "#fccbc7",
          "danger-l-7": "#fde1df",
          "danger-l-8": "#fff8f7",
          "danger-l-9": "#fff",
          "danger-t-1": "rgba(244,67,54,0.95)",
          "danger-t-10": "rgba(244,67,54,0.5)",
          "danger-t-11": "rgba(244,67,54,0.44999999999999996)",
          "danger-t-12": "rgba(244,67,54,0.3999999999999999)",
          "danger-t-13": "rgba(244,67,54,0.35)",
          "danger-t-14": "rgba(244,67,54,0.3)",
          "danger-t-15": "rgba(244,67,54,0.25)",
          "danger-t-16": "rgba(244,67,54,0.2)",
          "danger-t-17": "rgba(244,67,54,0.14999999999999986)",
          "danger-t-18": "rgba(244,67,54,0.1)",
          "danger-t-19": "rgba(244,67,54,0.05)",
          "danger-t-2": "rgba(244,67,54,0.9)",
          "danger-t-3": "rgba(244,67,54,0.85)",
          "danger-t-4": "rgba(244,67,54,0.8)",
          "danger-t-5": "rgba(244,67,54,0.75)",
          "danger-t-6": "rgba(244,67,54,0.7)",
          "danger-t-7": "rgba(244,67,54,0.65)",
          "danger-t-8": "rgba(244,67,54,0.6)",
          "danger-t-9": "rgba(244,67,54,0.55)",
          "dark": "#3A324D",
          "dark-d-1": "#2e283e",
          "dark-d-10": "#000",
          "dark-d-11": "#000",
          "dark-d-12": "#000",
          "dark-d-13": "#000",
          "dark-d-14": "#000",
          "dark-d-15": "#000",
          "dark-d-16": "#000",
          "dark-d-17": "#000",
          "dark-d-18": "#000",
          "dark-d-19": "#000",
          "dark-d-2": "#231e2e",
          "dark-d-3": "#17141f",
          "dark-d-4": "#0b0a0f",
          "dark-d-5": "#000",
          "dark-d-6": "#000",
          "dark-d-7": "#000",
          "dark-d-8": "#000",
          "dark-d-9": "#000",
          "dark-l-1": "#463c5c",
          "dark-l-10": "#b9b1cd",
          "dark-l-11": "#c7c1d7",
          "dark-l-12": "#d5d0e1",
          "dark-l-13": "#e3e0eb",
          "dark-l-14": "#f1eff5",
          "dark-l-15": "#fff",
          "dark-l-16": "#fff",
          "dark-l-17": "#fff",
          "dark-l-18": "#fff",
          "dark-l-19": "#fff",
          "dark-l-2": "#51466c",
          "dark-l-3": "#5d507b",
          "dark-l-4": "#695a8b",
          "dark-l-5": "#74649a",
          "dark-l-6": "#8274a4",
          "dark-l-7": "#9083ae",
          "dark-l-8": "#9e92b9",
          "dark-l-9": "#aca2c3",
          "dark-t-1": "rgba(58,50,77,0.95)",
          "dark-t-10": "rgba(58,50,77,0.5)",
          "dark-t-11": "rgba(58,50,77,0.44999999999999996)",
          "dark-t-12": "rgba(58,50,77,0.3999999999999999)",
          "dark-t-13": "rgba(58,50,77,0.35)",
          "dark-t-14": "rgba(58,50,77,0.3)",
          "dark-t-15": "rgba(58,50,77,0.25)",
          "dark-t-16": "rgba(58,50,77,0.2)",
          "dark-t-17": "rgba(58,50,77,0.14999999999999986)",
          "dark-t-18": "rgba(58,50,77,0.1)",
          "dark-t-19": "rgba(58,50,77,0.05)",
          "dark-t-2": "rgba(58,50,77,0.9)",
          "dark-t-3": "rgba(58,50,77,0.85)",
          "dark-t-4": "rgba(58,50,77,0.8)",
          "dark-t-5": "rgba(58,50,77,0.75)",
          "dark-t-6": "rgba(58,50,77,0.7)",
          "dark-t-7": "rgba(58,50,77,0.65)",
          "dark-t-8": "rgba(58,50,77,0.6)",
          "dark-t-9": "rgba(58,50,77,0.55)",
          "default": "#999999",
          "default-d-1": "#8c8c8c",
          "default-d-10": "#191919",
          "default-d-11": "#0d0d0d",
          "default-d-12": "#000",
          "default-d-13": "#000",
          "default-d-14": "#000",
          "default-d-15": "#000",
          "default-d-16": "#000",
          "default-d-17": "#000",
          "default-d-18": "#000",
          "default-d-19": "#000",
          "default-d-2": "#808080",
          "default-d-3": "#737373",
          "default-d-4": "#666",
          "default-d-5": "#595959",
          "default-d-6": "#4c4c4c",
          "default-d-7": "#404040",
          "default-d-8": "#333",
          "default-d-9": "#262626",
          "default-l-1": "#a6a6a6",
          "default-l-10": "#fff",
          "default-l-11": "#fff",
          "default-l-12": "#fff",
          "default-l-13": "#fff",
          "default-l-14": "#fff",
          "default-l-15": "#fff",
          "default-l-16": "#fff",
          "default-l-17": "#fff",
          "default-l-18": "#fff",
          "default-l-19": "#fff",
          "default-l-2": "#b3b3b3",
          "default-l-3": "#bfbfbf",
          "default-l-4": "#ccc",
          "default-l-5": "#d9d9d9",
          "default-l-6": "#e6e6e6",
          "default-l-7": "#f2f2f2",
          "default-l-8": "#fff",
          "default-l-9": "#fff",
          "default-t-1": "rgba(153,153,153,0.95)",
          "default-t-10": "rgba(153,153,153,0.5)",
          "default-t-11": "rgba(153,153,153,0.44999999999999996)",
          "default-t-12": "rgba(153,153,153,0.3999999999999999)",
          "default-t-13": "rgba(153,153,153,0.35)",
          "default-t-14": "rgba(153,153,153,0.3)",
          "default-t-15": "rgba(153,153,153,0.25)",
          "default-t-16": "rgba(153,153,153,0.2)",
          "default-t-17": "rgba(153,153,153,0.14999999999999986)",
          "default-t-18": "rgba(153,153,153,0.1)",
          "default-t-19": "rgba(153,153,153,0.05)",
          "default-t-2": "rgba(153,153,153,0.9)",
          "default-t-3": "rgba(153,153,153,0.85)",
          "default-t-4": "rgba(153,153,153,0.8)",
          "default-t-5": "rgba(153,153,153,0.75)",
          "default-t-6": "rgba(153,153,153,0.7)",
          "default-t-7": "rgba(153,153,153,0.65)",
          "default-t-8": "rgba(153,153,153,0.6)",
          "default-t-9": "rgba(153,153,153,0.55)",
          "info": "#a9cae6",
          "info-d-1": "#95bee0",
          "info-d-10": "#204b70",
          "info-d-11": "#1b3e5c",
          "info-d-12": "#153148",
          "info-d-13": "#0f2334",
          "info-d-14": "#091621",
          "info-d-15": "#04090d",
          "info-d-16": "#000",
          "info-d-17": "#000",
          "info-d-18": "#000",
          "info-d-19": "#000",
          "info-d-2": "#81b2db",
          "info-d-3": "#6ea5d5",
          "info-d-4": "#5a99cf",
          "info-d-5": "#468dc9",
          "info-d-6": "#3781bf",
          "info-d-7": "#3273ab",
          "info-d-8": "#2c6697",
          "info-d-9": "#265983",
          "info-l-1": "#bdd6ec",
          "info-l-10": "#fff",
          "info-l-11": "#fff",
          "info-l-12": "#fff",
          "info-l-13": "#fff",
          "info-l-14": "#fff",
          "info-l-15": "#fff",
          "info-l-16": "#fff",
          "info-l-17": "#fff",
          "info-l-18": "#fff",
          "info-l-19": "#fff",
          "info-l-2": "#d1e2f1",
          "info-l-3": "#e4eff7",
          "info-l-4": "#f8fbfd",
          "info-l-5": "#fff",
          "info-l-6": "#fff",
          "info-l-7": "#fff",
          "info-l-8": "#fff",
          "info-l-9": "#fff",
          "info-t-1": "rgba(169,202,230,0.95)",
          "info-t-10": "rgba(169,202,230,0.5)",
          "info-t-11": "rgba(169,202,230,0.44999999999999996)",
          "info-t-12": "rgba(169,202,230,0.3999999999999999)",
          "info-t-13": "rgba(169,202,230,0.35)",
          "info-t-14": "rgba(169,202,230,0.3)",
          "info-t-15": "rgba(169,202,230,0.25)",
          "info-t-16": "rgba(169,202,230,0.2)",
          "info-t-17": "rgba(169,202,230,0.14999999999999986)",
          "info-t-18": "rgba(169,202,230,0.1)",
          "info-t-19": "rgba(169,202,230,0.05)",
          "info-t-2": "rgba(169,202,230,0.9)",
          "info-t-3": "rgba(169,202,230,0.85)",
          "info-t-4": "rgba(169,202,230,0.8)",
          "info-t-5": "rgba(169,202,230,0.75)",
          "info-t-6": "rgba(169,202,230,0.7)",
          "info-t-7": "rgba(169,202,230,0.65)",
          "info-t-8": "rgba(169,202,230,0.6)",
          "info-t-9": "rgba(169,202,230,0.55)",
          "light": "#F8F7F7",
          "light-d-1": "#ece9e9",
          "light-d-10": "#807070",
          "light-d-11": "#726464",
          "light-d-12": "#655858",
          "light-d-13": "#574c4c",
          "light-d-14": "#4a4040",
          "light-d-15": "#3c3535",
          "light-d-16": "#2e2929",
          "light-d-17": "#211d1d",
          "light-d-18": "#131111",
          "light-d-19": "#060505",
          "light-d-2": "#e0dcdc",
          "light-d-3": "#d4cece",
          "light-d-4": "#c8c1c1",
          "light-d-5": "#bdb3b3",
          "light-d-6": "#b1a5a5",
          "light-d-7": "#a59898",
          "light-d-8": "#998a8a",
          "light-d-9": "#8d7d7d",
          "light-l-1": "#fff",
          "light-l-10": "#fff",
          "light-l-11": "#fff",
          "light-l-12": "#fff",
          "light-l-13": "#fff",
          "light-l-14": "#fff",
          "light-l-15": "#fff",
          "light-l-16": "#fff",
          "light-l-17": "#fff",
          "light-l-18": "#fff",
          "light-l-19": "#fff",
          "light-l-2": "#fff",
          "light-l-3": "#fff",
          "light-l-4": "#fff",
          "light-l-5": "#fff",
          "light-l-6": "#fff",
          "light-l-7": "#fff",
          "light-l-8": "#fff",
          "light-l-9": "#fff",
          "light-t-1": "rgba(248,247,247,0.95)",
          "light-t-10": "rgba(248,247,247,0.5)",
          "light-t-11": "rgba(248,247,247,0.44999999999999996)",
          "light-t-12": "rgba(248,247,247,0.3999999999999999)",
          "light-t-13": "rgba(248,247,247,0.35)",
          "light-t-14": "rgba(248,247,247,0.3)",
          "light-t-15": "rgba(248,247,247,0.25)",
          "light-t-16": "rgba(248,247,247,0.2)",
          "light-t-17": "rgba(248,247,247,0.14999999999999986)",
          "light-t-18": "rgba(248,247,247,0.1)",
          "light-t-19": "rgba(248,247,247,0.05)",
          "light-t-2": "rgba(248,247,247,0.9)",
          "light-t-3": "rgba(248,247,247,0.85)",
          "light-t-4": "rgba(248,247,247,0.8)",
          "light-t-5": "rgba(248,247,247,0.75)",
          "light-t-6": "rgba(248,247,247,0.7)",
          "light-t-7": "rgba(248,247,247,0.65)",
          "light-t-8": "rgba(248,247,247,0.6)",
          "light-t-9": "rgba(248,247,247,0.55)",
          "primary": "#3883DF",
          "primary-d-1": "#2375da",
          "primary-d-10": "#030b15",
          "primary-d-11": "#000",
          "primary-d-12": "#000",
          "primary-d-13": "#000",
          "primary-d-14": "#000",
          "primary-d-15": "#000",
          "primary-d-16": "#000",
          "primary-d-17": "#000",
          "primary-d-18": "#000",
          "primary-d-19": "#000",
          "primary-d-2": "#206ac4",
          "primary-d-3": "#1c5eae",
          "primary-d-4": "#195298",
          "primary-d-5": "#154683",
          "primary-d-6": "#113a6d",
          "primary-d-7": "#0e2f57",
          "primary-d-8": "#0a2341",
          "primary-d-9": "#07172b",
          "primary-l-1": "#4e91e3",
          "primary-l-10": "#fff",
          "primary-l-11": "#fff",
          "primary-l-12": "#fff",
          "primary-l-13": "#fff",
          "primary-l-14": "#fff",
          "primary-l-15": "#fff",
          "primary-l-16": "#fff",
          "primary-l-17": "#fff",
          "primary-l-18": "#fff",
          "primary-l-19": "#fff",
          "primary-l-2": "#649ee6",
          "primary-l-3": "#7aacea",
          "primary-l-4": "#90baed",
          "primary-l-5": "#a6c7f1",
          "primary-l-6": "#bcd5f4",
          "primary-l-7": "#d2e3f8",
          "primary-l-8": "#e8f1fb",
          "primary-l-9": "#fefeff",
          "primary-t-1": "rgba(56,131,223,0.95)",
          "primary-t-10": "rgba(56,131,223,0.5)",
          "primary-t-11": "rgba(56,131,223,0.44999999999999996)",
          "primary-t-12": "rgba(56,131,223,0.3999999999999999)",
          "primary-t-13": "rgba(56,131,223,0.35)",
          "primary-t-14": "rgba(56,131,223,0.3)",
          "primary-t-15": "rgba(56,131,223,0.25)",
          "primary-t-16": "rgba(56,131,223,0.2)",
          "primary-t-17": "rgba(56,131,223,0.14999999999999986)",
          "primary-t-18": "rgba(56,131,223,0.1)",
          "primary-t-19": "rgba(56,131,223,0.05)",
          "primary-t-2": "rgba(56,131,223,0.9)",
          "primary-t-3": "rgba(56,131,223,0.85)",
          "primary-t-4": "rgba(56,131,223,0.8)",
          "primary-t-5": "rgba(56,131,223,0.75)",
          "primary-t-6": "rgba(56,131,223,0.7)",
          "primary-t-7": "rgba(56,131,223,0.65)",
          "primary-t-8": "rgba(56,131,223,0.6)",
          "primary-t-9": "rgba(56,131,223,0.55)",
          "secondary": "#EE8963",
          "secondary-d-1": "#eb784c",
          "secondary-d-10": "#4a1a08",
          "secondary-d-11": "#331206",
          "secondary-d-12": "#1c0a03",
          "secondary-d-13": "#050201",
          "secondary-d-14": "#000",
          "secondary-d-15": "#000",
          "secondary-d-16": "#000",
          "secondary-d-17": "#000",
          "secondary-d-18": "#000",
          "secondary-d-19": "#000",
          "secondary-d-2": "#e96635",
          "secondary-d-3": "#e6551e",
          "secondary-d-4": "#d44b17",
          "secondary-d-5": "#bd4315",
          "secondary-d-6": "#a63a12",
          "secondary-d-7": "#8f3210",
          "secondary-d-8": "#782a0d",
          "secondary-d-9": "#61220b",
          "secondary-l-1": "#f19a7a",
          "secondary-l-10": "#fff",
          "secondary-l-11": "#fff",
          "secondary-l-12": "#fff",
          "secondary-l-13": "#fff",
          "secondary-l-14": "#fff",
          "secondary-l-15": "#fff",
          "secondary-l-16": "#fff",
          "secondary-l-17": "#fff",
          "secondary-l-18": "#fff",
          "secondary-l-19": "#fff",
          "secondary-l-2": "#f3ac91",
          "secondary-l-3": "#f6bda8",
          "secondary-l-4": "#f8cfbf",
          "secondary-l-5": "#fbe0d6",
          "secondary-l-6": "#fdf1ed",
          "secondary-l-7": "#fff",
          "secondary-l-8": "#fff",
          "secondary-l-9": "#fff",
          "secondary-t-1": "rgba(238,137,99,0.95)",
          "secondary-t-10": "rgba(238,137,99,0.5)",
          "secondary-t-11": "rgba(238,137,99,0.44999999999999996)",
          "secondary-t-12": "rgba(238,137,99,0.3999999999999999)",
          "secondary-t-13": "rgba(238,137,99,0.35)",
          "secondary-t-14": "rgba(238,137,99,0.3)",
          "secondary-t-15": "rgba(238,137,99,0.25)",
          "secondary-t-16": "rgba(238,137,99,0.2)",
          "secondary-t-17": "rgba(238,137,99,0.14999999999999986)",
          "secondary-t-18": "rgba(238,137,99,0.1)",
          "secondary-t-19": "rgba(238,137,99,0.05)",
          "secondary-t-2": "rgba(238,137,99,0.9)",
          "secondary-t-3": "rgba(238,137,99,0.85)",
          "secondary-t-4": "rgba(238,137,99,0.8)",
          "secondary-t-5": "rgba(238,137,99,0.75)",
          "secondary-t-6": "rgba(238,137,99,0.7)",
          "secondary-t-7": "rgba(238,137,99,0.65)",
          "secondary-t-8": "rgba(238,137,99,0.6)",
          "secondary-t-9": "rgba(238,137,99,0.55)",
          "success": "#46a27b",
          "success-d-1": "#3e906d",
          "success-d-10": "#000",
          "success-d-11": "#000",
          "success-d-12": "#000",
          "success-d-13": "#000",
          "success-d-14": "#000",
          "success-d-15": "#000",
          "success-d-16": "#000",
          "success-d-17": "#000",
          "success-d-18": "#000",
          "success-d-19": "#000",
          "success-d-2": "#377e60",
          "success-d-3": "#2f6d52",
          "success-d-4": "#275b45",
          "success-d-5": "#204937",
          "success-d-6": "#18372a",
          "success-d-7": "#10251c",
          "success-d-8": "#08140f",
          "success-d-9": "#010201",
          "success-l-1": "#4fb388",
          "success-l-10": "#eff8f4",
          "success-l-11": "#fff",
          "success-l-12": "#fff",
          "success-l-13": "#fff",
          "success-l-14": "#fff",
          "success-l-15": "#fff",
          "success-l-16": "#fff",
          "success-l-17": "#fff",
          "success-l-18": "#fff",
          "success-l-19": "#fff",
          "success-l-2": "#60bb94",
          "success-l-3": "#72c2a0",
          "success-l-4": "#84caac",
          "success-l-5": "#96d2b8",
          "success-l-6": "#a8d9c4",
          "success-l-7": "#bae1d0",
          "success-l-8": "#cbe9dc",
          "success-l-9": "#ddf0e8",
          "success-t-1": "rgba(70,162,123,0.95)",
          "success-t-10": "rgba(70,162,123,0.5)",
          "success-t-11": "rgba(70,162,123,0.44999999999999996)",
          "success-t-12": "rgba(70,162,123,0.3999999999999999)",
          "success-t-13": "rgba(70,162,123,0.35)",
          "success-t-14": "rgba(70,162,123,0.3)",
          "success-t-15": "rgba(70,162,123,0.25)",
          "success-t-16": "rgba(70,162,123,0.2)",
          "success-t-17": "rgba(70,162,123,0.14999999999999986)",
          "success-t-18": "rgba(70,162,123,0.1)",
          "success-t-19": "rgba(70,162,123,0.05)",
          "success-t-2": "rgba(70,162,123,0.9)",
          "success-t-3": "rgba(70,162,123,0.85)",
          "success-t-4": "rgba(70,162,123,0.8)",
          "success-t-5": "rgba(70,162,123,0.75)",
          "success-t-6": "rgba(70,162,123,0.7)",
          "success-t-7": "rgba(70,162,123,0.65)",
          "success-t-8": "rgba(70,162,123,0.6)",
          "success-t-9": "rgba(70,162,123,0.55)",
          "tertiary": "#8B5691",
          "tertiary-d-1": "#7c4d81",
          "tertiary-d-10": "#000",
          "tertiary-d-11": "#000",
          "tertiary-d-12": "#000",
          "tertiary-d-13": "#000",
          "tertiary-d-14": "#000",
          "tertiary-d-15": "#000",
          "tertiary-d-16": "#000",
          "tertiary-d-17": "#000",
          "tertiary-d-18": "#000",
          "tertiary-d-19": "#000",
          "tertiary-d-2": "#6c4371",
          "tertiary-d-3": "#5d3a61",
          "tertiary-d-4": "#4e3051",
          "tertiary-d-5": "#3e2741",
          "tertiary-d-6": "#2f1d31",
          "tertiary-d-7": "#201421",
          "tertiary-d-8": "#100a11",
          "tertiary-d-9": "#010101",
          "tertiary-l-1": "#9a60a1",
          "tertiary-l-10": "#f5f0f6",
          "tertiary-l-11": "#fff",
          "tertiary-l-12": "#fff",
          "tertiary-l-13": "#fff",
          "tertiary-l-14": "#fff",
          "tertiary-l-15": "#fff",
          "tertiary-l-16": "#fff",
          "tertiary-l-17": "#fff",
          "tertiary-l-18": "#fff",
          "tertiary-l-19": "#fff",
          "tertiary-l-2": "#a470aa",
          "tertiary-l-3": "#ae80b4",
          "tertiary-l-4": "#b990bd",
          "tertiary-l-5": "#c3a0c7",
          "tertiary-l-6": "#cdb0d0",
          "tertiary-l-7": "#d7c0da",
          "tertiary-l-8": "#e1d0e3",
          "tertiary-l-9": "#ebe0ed",
          "tertiary-t-1": "rgba(139,86,145,0.95)",
          "tertiary-t-10": "rgba(139,86,145,0.5)",
          "tertiary-t-11": "rgba(139,86,145,0.44999999999999996)",
          "tertiary-t-12": "rgba(139,86,145,0.3999999999999999)",
          "tertiary-t-13": "rgba(139,86,145,0.35)",
          "tertiary-t-14": "rgba(139,86,145,0.3)",
          "tertiary-t-15": "rgba(139,86,145,0.25)",
          "tertiary-t-16": "rgba(139,86,145,0.2)",
          "tertiary-t-17": "rgba(139,86,145,0.14999999999999986)",
          "tertiary-t-18": "rgba(139,86,145,0.1)",
          "tertiary-t-19": "rgba(139,86,145,0.05)",
          "tertiary-t-2": "rgba(139,86,145,0.9)",
          "tertiary-t-3": "rgba(139,86,145,0.85)",
          "tertiary-t-4": "rgba(139,86,145,0.8)",
          "tertiary-t-5": "rgba(139,86,145,0.75)",
          "tertiary-t-6": "rgba(139,86,145,0.7)",
          "tertiary-t-7": "rgba(139,86,145,0.65)",
          "tertiary-t-8": "rgba(139,86,145,0.6)",
          "tertiary-t-9": "rgba(139,86,145,0.55)",
          "warning": "#c39243",
          "warning-d-1": "#b38539",
          "warning-d-10": "#050402",
          "warning-d-11": "#000",
          "warning-d-12": "#000",
          "warning-d-13": "#000",
          "warning-d-14": "#000",
          "warning-d-15": "#000",
          "warning-d-16": "#000",
          "warning-d-17": "#000",
          "warning-d-18": "#000",
          "warning-d-19": "#000",
          "warning-d-2": "#a07633",
          "warning-d-3": "#8d682d",
          "warning-d-4": "#795a27",
          "warning-d-5": "#664b21",
          "warning-d-6": "#533d1a",
          "warning-d-7": "#3f2f14",
          "warning-d-8": "#2c210e",
          "warning-d-9": "#191208",
          "warning-l-1": "#c99d56",
          "warning-l-10": "#fff",
          "warning-l-11": "#fff",
          "warning-l-12": "#fff",
          "warning-l-13": "#fff",
          "warning-l-14": "#fff",
          "warning-l-15": "#fff",
          "warning-l-16": "#fff",
          "warning-l-17": "#fff",
          "warning-l-18": "#fff",
          "warning-l-19": "#fff",
          "warning-l-2": "#cfa86a",
          "warning-l-3": "#d6b47d",
          "warning-l-4": "#dcbf90",
          "warning-l-5": "#e2caa4",
          "warning-l-6": "#e8d5b7",
          "warning-l-7": "#eee0ca",
          "warning-l-8": "#f4ecde",
          "warning-l-9": "#fbf7f1",
          "warning-t-1": "rgba(195,146,67,0.95)",
          "warning-t-10": "rgba(195,146,67,0.5)",
          "warning-t-11": "rgba(195,146,67,0.44999999999999996)",
          "warning-t-12": "rgba(195,146,67,0.3999999999999999)",
          "warning-t-13": "rgba(195,146,67,0.35)",
          "warning-t-14": "rgba(195,146,67,0.3)",
          "warning-t-15": "rgba(195,146,67,0.25)",
          "warning-t-16": "rgba(195,146,67,0.2)",
          "warning-t-17": "rgba(195,146,67,0.14999999999999986)",
          "warning-t-18": "rgba(195,146,67,0.1)",
          "warning-t-19": "rgba(195,146,67,0.05)",
          "warning-t-2": "rgba(195,146,67,0.9)",
          "warning-t-3": "rgba(195,146,67,0.85)",
          "warning-t-4": "rgba(195,146,67,0.8)",
          "warning-t-5": "rgba(195,146,67,0.75)",
          "warning-t-6": "rgba(195,146,67,0.7)",
          "warning-t-7": "rgba(195,146,67,0.65)",
          "warning-t-8": "rgba(195,146,67,0.6)",
          "warning-t-9": "rgba(195,146,67,0.55)",
        },
        "defaults": Object {
          "borderColor": "default-d-1",
          "colors": Array [
            "default-l-1",
            "default",
            "default-l-1",
          ],
          "gradientDirection": "0deg",
        },
        "fontSizes": Array [
          12,
          16,
          18,
          24,
          36,
          72,
        ],
        "gradients": undefined,
        "space": Array [
          0,
          6,
          12,
          18,
          24,
        ],
      }
    }
  >
    <styled.button
      block={true}
    />
  </ThemeProvider>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {
      "block": true,
    },
    "ref": null,
    "rendered": null,
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "block": true,
      },
      "ref": null,
      "rendered": null,
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;

exports[`ButtonStyled Component should properly utilize the float prop 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <styled.button
    float="left"
    theme={
      Object {
        "breakpoints": Array [
          32,
          48,
          81,
          100,
        ],
        "colors": Object {
          "danger": "#f44336",
          "danger-d-1": "#f32c1e",
          "danger-d-10": "#290502",
          "danger-d-11": "#110201",
          "danger-d-12": "#000",
          "danger-d-13": "#000",
          "danger-d-14": "#000",
          "danger-d-15": "#000",
          "danger-d-16": "#000",
          "danger-d-17": "#000",
          "danger-d-18": "#000",
          "danger-d-19": "#000",
          "danger-d-2": "#ea1c0d",
          "danger-d-3": "#d2190b",
          "danger-d-4": "#ba160a",
          "danger-d-5": "#a21309",
          "danger-d-6": "#891008",
          "danger-d-7": "#710e06",
          "danger-d-8": "#590b05",
          "danger-d-9": "#410804",
          "danger-l-1": "#f55a4e",
          "danger-l-10": "#fff",
          "danger-l-11": "#fff",
          "danger-l-12": "#fff",
          "danger-l-13": "#fff",
          "danger-l-14": "#fff",
          "danger-l-15": "#fff",
          "danger-l-16": "#fff",
          "danger-l-17": "#fff",
          "danger-l-18": "#fff",
          "danger-l-19": "#fff",
          "danger-l-2": "#f77066",
          "danger-l-3": "#f8877f",
          "danger-l-4": "#f99d97",
          "danger-l-5": "#fbb4af",
          "danger-l-6": "#fccbc7",
          "danger-l-7": "#fde1df",
          "danger-l-8": "#fff8f7",
          "danger-l-9": "#fff",
          "danger-t-1": "rgba(244,67,54,0.95)",
          "danger-t-10": "rgba(244,67,54,0.5)",
          "danger-t-11": "rgba(244,67,54,0.44999999999999996)",
          "danger-t-12": "rgba(244,67,54,0.3999999999999999)",
          "danger-t-13": "rgba(244,67,54,0.35)",
          "danger-t-14": "rgba(244,67,54,0.3)",
          "danger-t-15": "rgba(244,67,54,0.25)",
          "danger-t-16": "rgba(244,67,54,0.2)",
          "danger-t-17": "rgba(244,67,54,0.14999999999999986)",
          "danger-t-18": "rgba(244,67,54,0.1)",
          "danger-t-19": "rgba(244,67,54,0.05)",
          "danger-t-2": "rgba(244,67,54,0.9)",
          "danger-t-3": "rgba(244,67,54,0.85)",
          "danger-t-4": "rgba(244,67,54,0.8)",
          "danger-t-5": "rgba(244,67,54,0.75)",
          "danger-t-6": "rgba(244,67,54,0.7)",
          "danger-t-7": "rgba(244,67,54,0.65)",
          "danger-t-8": "rgba(244,67,54,0.6)",
          "danger-t-9": "rgba(244,67,54,0.55)",
          "dark": "#3A324D",
          "dark-d-1": "#2e283e",
          "dark-d-10": "#000",
          "dark-d-11": "#000",
          "dark-d-12": "#000",
          "dark-d-13": "#000",
          "dark-d-14": "#000",
          "dark-d-15": "#000",
          "dark-d-16": "#000",
          "dark-d-17": "#000",
          "dark-d-18": "#000",
          "dark-d-19": "#000",
          "dark-d-2": "#231e2e",
          "dark-d-3": "#17141f",
          "dark-d-4": "#0b0a0f",
          "dark-d-5": "#000",
          "dark-d-6": "#000",
          "dark-d-7": "#000",
          "dark-d-8": "#000",
          "dark-d-9": "#000",
          "dark-l-1": "#463c5c",
          "dark-l-10": "#b9b1cd",
          "dark-l-11": "#c7c1d7",
          "dark-l-12": "#d5d0e1",
          "dark-l-13": "#e3e0eb",
          "dark-l-14": "#f1eff5",
          "dark-l-15": "#fff",
          "dark-l-16": "#fff",
          "dark-l-17": "#fff",
          "dark-l-18": "#fff",
          "dark-l-19": "#fff",
          "dark-l-2": "#51466c",
          "dark-l-3": "#5d507b",
          "dark-l-4": "#695a8b",
          "dark-l-5": "#74649a",
          "dark-l-6": "#8274a4",
          "dark-l-7": "#9083ae",
          "dark-l-8": "#9e92b9",
          "dark-l-9": "#aca2c3",
          "dark-t-1": "rgba(58,50,77,0.95)",
          "dark-t-10": "rgba(58,50,77,0.5)",
          "dark-t-11": "rgba(58,50,77,0.44999999999999996)",
          "dark-t-12": "rgba(58,50,77,0.3999999999999999)",
          "dark-t-13": "rgba(58,50,77,0.35)",
          "dark-t-14": "rgba(58,50,77,0.3)",
          "dark-t-15": "rgba(58,50,77,0.25)",
          "dark-t-16": "rgba(58,50,77,0.2)",
          "dark-t-17": "rgba(58,50,77,0.14999999999999986)",
          "dark-t-18": "rgba(58,50,77,0.1)",
          "dark-t-19": "rgba(58,50,77,0.05)",
          "dark-t-2": "rgba(58,50,77,0.9)",
          "dark-t-3": "rgba(58,50,77,0.85)",
          "dark-t-4": "rgba(58,50,77,0.8)",
          "dark-t-5": "rgba(58,50,77,0.75)",
          "dark-t-6": "rgba(58,50,77,0.7)",
          "dark-t-7": "rgba(58,50,77,0.65)",
          "dark-t-8": "rgba(58,50,77,0.6)",
          "dark-t-9": "rgba(58,50,77,0.55)",
          "default": "#999999",
          "default-d-1": "#8c8c8c",
          "default-d-10": "#191919",
          "default-d-11": "#0d0d0d",
          "default-d-12": "#000",
          "default-d-13": "#000",
          "default-d-14": "#000",
          "default-d-15": "#000",
          "default-d-16": "#000",
          "default-d-17": "#000",
          "default-d-18": "#000",
          "default-d-19": "#000",
          "default-d-2": "#808080",
          "default-d-3": "#737373",
          "default-d-4": "#666",
          "default-d-5": "#595959",
          "default-d-6": "#4c4c4c",
          "default-d-7": "#404040",
          "default-d-8": "#333",
          "default-d-9": "#262626",
          "default-l-1": "#a6a6a6",
          "default-l-10": "#fff",
          "default-l-11": "#fff",
          "default-l-12": "#fff",
          "default-l-13": "#fff",
          "default-l-14": "#fff",
          "default-l-15": "#fff",
          "default-l-16": "#fff",
          "default-l-17": "#fff",
          "default-l-18": "#fff",
          "default-l-19": "#fff",
          "default-l-2": "#b3b3b3",
          "default-l-3": "#bfbfbf",
          "default-l-4": "#ccc",
          "default-l-5": "#d9d9d9",
          "default-l-6": "#e6e6e6",
          "default-l-7": "#f2f2f2",
          "default-l-8": "#fff",
          "default-l-9": "#fff",
          "default-t-1": "rgba(153,153,153,0.95)",
          "default-t-10": "rgba(153,153,153,0.5)",
          "default-t-11": "rgba(153,153,153,0.44999999999999996)",
          "default-t-12": "rgba(153,153,153,0.3999999999999999)",
          "default-t-13": "rgba(153,153,153,0.35)",
          "default-t-14": "rgba(153,153,153,0.3)",
          "default-t-15": "rgba(153,153,153,0.25)",
          "default-t-16": "rgba(153,153,153,0.2)",
          "default-t-17": "rgba(153,153,153,0.14999999999999986)",
          "default-t-18": "rgba(153,153,153,0.1)",
          "default-t-19": "rgba(153,153,153,0.05)",
          "default-t-2": "rgba(153,153,153,0.9)",
          "default-t-3": "rgba(153,153,153,0.85)",
          "default-t-4": "rgba(153,153,153,0.8)",
          "default-t-5": "rgba(153,153,153,0.75)",
          "default-t-6": "rgba(153,153,153,0.7)",
          "default-t-7": "rgba(153,153,153,0.65)",
          "default-t-8": "rgba(153,153,153,0.6)",
          "default-t-9": "rgba(153,153,153,0.55)",
          "info": "#a9cae6",
          "info-d-1": "#95bee0",
          "info-d-10": "#204b70",
          "info-d-11": "#1b3e5c",
          "info-d-12": "#153148",
          "info-d-13": "#0f2334",
          "info-d-14": "#091621",
          "info-d-15": "#04090d",
          "info-d-16": "#000",
          "info-d-17": "#000",
          "info-d-18": "#000",
          "info-d-19": "#000",
          "info-d-2": "#81b2db",
          "info-d-3": "#6ea5d5",
          "info-d-4": "#5a99cf",
          "info-d-5": "#468dc9",
          "info-d-6": "#3781bf",
          "info-d-7": "#3273ab",
          "info-d-8": "#2c6697",
          "info-d-9": "#265983",
          "info-l-1": "#bdd6ec",
          "info-l-10": "#fff",
          "info-l-11": "#fff",
          "info-l-12": "#fff",
          "info-l-13": "#fff",
          "info-l-14": "#fff",
          "info-l-15": "#fff",
          "info-l-16": "#fff",
          "info-l-17": "#fff",
          "info-l-18": "#fff",
          "info-l-19": "#fff",
          "info-l-2": "#d1e2f1",
          "info-l-3": "#e4eff7",
          "info-l-4": "#f8fbfd",
          "info-l-5": "#fff",
          "info-l-6": "#fff",
          "info-l-7": "#fff",
          "info-l-8": "#fff",
          "info-l-9": "#fff",
          "info-t-1": "rgba(169,202,230,0.95)",
          "info-t-10": "rgba(169,202,230,0.5)",
          "info-t-11": "rgba(169,202,230,0.44999999999999996)",
          "info-t-12": "rgba(169,202,230,0.3999999999999999)",
          "info-t-13": "rgba(169,202,230,0.35)",
          "info-t-14": "rgba(169,202,230,0.3)",
          "info-t-15": "rgba(169,202,230,0.25)",
          "info-t-16": "rgba(169,202,230,0.2)",
          "info-t-17": "rgba(169,202,230,0.14999999999999986)",
          "info-t-18": "rgba(169,202,230,0.1)",
          "info-t-19": "rgba(169,202,230,0.05)",
          "info-t-2": "rgba(169,202,230,0.9)",
          "info-t-3": "rgba(169,202,230,0.85)",
          "info-t-4": "rgba(169,202,230,0.8)",
          "info-t-5": "rgba(169,202,230,0.75)",
          "info-t-6": "rgba(169,202,230,0.7)",
          "info-t-7": "rgba(169,202,230,0.65)",
          "info-t-8": "rgba(169,202,230,0.6)",
          "info-t-9": "rgba(169,202,230,0.55)",
          "light": "#F8F7F7",
          "light-d-1": "#ece9e9",
          "light-d-10": "#807070",
          "light-d-11": "#726464",
          "light-d-12": "#655858",
          "light-d-13": "#574c4c",
          "light-d-14": "#4a4040",
          "light-d-15": "#3c3535",
          "light-d-16": "#2e2929",
          "light-d-17": "#211d1d",
          "light-d-18": "#131111",
          "light-d-19": "#060505",
          "light-d-2": "#e0dcdc",
          "light-d-3": "#d4cece",
          "light-d-4": "#c8c1c1",
          "light-d-5": "#bdb3b3",
          "light-d-6": "#b1a5a5",
          "light-d-7": "#a59898",
          "light-d-8": "#998a8a",
          "light-d-9": "#8d7d7d",
          "light-l-1": "#fff",
          "light-l-10": "#fff",
          "light-l-11": "#fff",
          "light-l-12": "#fff",
          "light-l-13": "#fff",
          "light-l-14": "#fff",
          "light-l-15": "#fff",
          "light-l-16": "#fff",
          "light-l-17": "#fff",
          "light-l-18": "#fff",
          "light-l-19": "#fff",
          "light-l-2": "#fff",
          "light-l-3": "#fff",
          "light-l-4": "#fff",
          "light-l-5": "#fff",
          "light-l-6": "#fff",
          "light-l-7": "#fff",
          "light-l-8": "#fff",
          "light-l-9": "#fff",
          "light-t-1": "rgba(248,247,247,0.95)",
          "light-t-10": "rgba(248,247,247,0.5)",
          "light-t-11": "rgba(248,247,247,0.44999999999999996)",
          "light-t-12": "rgba(248,247,247,0.3999999999999999)",
          "light-t-13": "rgba(248,247,247,0.35)",
          "light-t-14": "rgba(248,247,247,0.3)",
          "light-t-15": "rgba(248,247,247,0.25)",
          "light-t-16": "rgba(248,247,247,0.2)",
          "light-t-17": "rgba(248,247,247,0.14999999999999986)",
          "light-t-18": "rgba(248,247,247,0.1)",
          "light-t-19": "rgba(248,247,247,0.05)",
          "light-t-2": "rgba(248,247,247,0.9)",
          "light-t-3": "rgba(248,247,247,0.85)",
          "light-t-4": "rgba(248,247,247,0.8)",
          "light-t-5": "rgba(248,247,247,0.75)",
          "light-t-6": "rgba(248,247,247,0.7)",
          "light-t-7": "rgba(248,247,247,0.65)",
          "light-t-8": "rgba(248,247,247,0.6)",
          "light-t-9": "rgba(248,247,247,0.55)",
          "primary": "#3883DF",
          "primary-d-1": "#2375da",
          "primary-d-10": "#030b15",
          "primary-d-11": "#000",
          "primary-d-12": "#000",
          "primary-d-13": "#000",
          "primary-d-14": "#000",
          "primary-d-15": "#000",
          "primary-d-16": "#000",
          "primary-d-17": "#000",
          "primary-d-18": "#000",
          "primary-d-19": "#000",
          "primary-d-2": "#206ac4",
          "primary-d-3": "#1c5eae",
          "primary-d-4": "#195298",
          "primary-d-5": "#154683",
          "primary-d-6": "#113a6d",
          "primary-d-7": "#0e2f57",
          "primary-d-8": "#0a2341",
          "primary-d-9": "#07172b",
          "primary-l-1": "#4e91e3",
          "primary-l-10": "#fff",
          "primary-l-11": "#fff",
          "primary-l-12": "#fff",
          "primary-l-13": "#fff",
          "primary-l-14": "#fff",
          "primary-l-15": "#fff",
          "primary-l-16": "#fff",
          "primary-l-17": "#fff",
          "primary-l-18": "#fff",
          "primary-l-19": "#fff",
          "primary-l-2": "#649ee6",
          "primary-l-3": "#7aacea",
          "primary-l-4": "#90baed",
          "primary-l-5": "#a6c7f1",
          "primary-l-6": "#bcd5f4",
          "primary-l-7": "#d2e3f8",
          "primary-l-8": "#e8f1fb",
          "primary-l-9": "#fefeff",
          "primary-t-1": "rgba(56,131,223,0.95)",
          "primary-t-10": "rgba(56,131,223,0.5)",
          "primary-t-11": "rgba(56,131,223,0.44999999999999996)",
          "primary-t-12": "rgba(56,131,223,0.3999999999999999)",
          "primary-t-13": "rgba(56,131,223,0.35)",
          "primary-t-14": "rgba(56,131,223,0.3)",
          "primary-t-15": "rgba(56,131,223,0.25)",
          "primary-t-16": "rgba(56,131,223,0.2)",
          "primary-t-17": "rgba(56,131,223,0.14999999999999986)",
          "primary-t-18": "rgba(56,131,223,0.1)",
          "primary-t-19": "rgba(56,131,223,0.05)",
          "primary-t-2": "rgba(56,131,223,0.9)",
          "primary-t-3": "rgba(56,131,223,0.85)",
          "primary-t-4": "rgba(56,131,223,0.8)",
          "primary-t-5": "rgba(56,131,223,0.75)",
          "primary-t-6": "rgba(56,131,223,0.7)",
          "primary-t-7": "rgba(56,131,223,0.65)",
          "primary-t-8": "rgba(56,131,223,0.6)",
          "primary-t-9": "rgba(56,131,223,0.55)",
          "secondary": "#EE8963",
          "secondary-d-1": "#eb784c",
          "secondary-d-10": "#4a1a08",
          "secondary-d-11": "#331206",
          "secondary-d-12": "#1c0a03",
          "secondary-d-13": "#050201",
          "secondary-d-14": "#000",
          "secondary-d-15": "#000",
          "secondary-d-16": "#000",
          "secondary-d-17": "#000",
          "secondary-d-18": "#000",
          "secondary-d-19": "#000",
          "secondary-d-2": "#e96635",
          "secondary-d-3": "#e6551e",
          "secondary-d-4": "#d44b17",
          "secondary-d-5": "#bd4315",
          "secondary-d-6": "#a63a12",
          "secondary-d-7": "#8f3210",
          "secondary-d-8": "#782a0d",
          "secondary-d-9": "#61220b",
          "secondary-l-1": "#f19a7a",
          "secondary-l-10": "#fff",
          "secondary-l-11": "#fff",
          "secondary-l-12": "#fff",
          "secondary-l-13": "#fff",
          "secondary-l-14": "#fff",
          "secondary-l-15": "#fff",
          "secondary-l-16": "#fff",
          "secondary-l-17": "#fff",
          "secondary-l-18": "#fff",
          "secondary-l-19": "#fff",
          "secondary-l-2": "#f3ac91",
          "secondary-l-3": "#f6bda8",
          "secondary-l-4": "#f8cfbf",
          "secondary-l-5": "#fbe0d6",
          "secondary-l-6": "#fdf1ed",
          "secondary-l-7": "#fff",
          "secondary-l-8": "#fff",
          "secondary-l-9": "#fff",
          "secondary-t-1": "rgba(238,137,99,0.95)",
          "secondary-t-10": "rgba(238,137,99,0.5)",
          "secondary-t-11": "rgba(238,137,99,0.44999999999999996)",
          "secondary-t-12": "rgba(238,137,99,0.3999999999999999)",
          "secondary-t-13": "rgba(238,137,99,0.35)",
          "secondary-t-14": "rgba(238,137,99,0.3)",
          "secondary-t-15": "rgba(238,137,99,0.25)",
          "secondary-t-16": "rgba(238,137,99,0.2)",
          "secondary-t-17": "rgba(238,137,99,0.14999999999999986)",
          "secondary-t-18": "rgba(238,137,99,0.1)",
          "secondary-t-19": "rgba(238,137,99,0.05)",
          "secondary-t-2": "rgba(238,137,99,0.9)",
          "secondary-t-3": "rgba(238,137,99,0.85)",
          "secondary-t-4": "rgba(238,137,99,0.8)",
          "secondary-t-5": "rgba(238,137,99,0.75)",
          "secondary-t-6": "rgba(238,137,99,0.7)",
          "secondary-t-7": "rgba(238,137,99,0.65)",
          "secondary-t-8": "rgba(238,137,99,0.6)",
          "secondary-t-9": "rgba(238,137,99,0.55)",
          "success": "#46a27b",
          "success-d-1": "#3e906d",
          "success-d-10": "#000",
          "success-d-11": "#000",
          "success-d-12": "#000",
          "success-d-13": "#000",
          "success-d-14": "#000",
          "success-d-15": "#000",
          "success-d-16": "#000",
          "success-d-17": "#000",
          "success-d-18": "#000",
          "success-d-19": "#000",
          "success-d-2": "#377e60",
          "success-d-3": "#2f6d52",
          "success-d-4": "#275b45",
          "success-d-5": "#204937",
          "success-d-6": "#18372a",
          "success-d-7": "#10251c",
          "success-d-8": "#08140f",
          "success-d-9": "#010201",
          "success-l-1": "#4fb388",
          "success-l-10": "#eff8f4",
          "success-l-11": "#fff",
          "success-l-12": "#fff",
          "success-l-13": "#fff",
          "success-l-14": "#fff",
          "success-l-15": "#fff",
          "success-l-16": "#fff",
          "success-l-17": "#fff",
          "success-l-18": "#fff",
          "success-l-19": "#fff",
          "success-l-2": "#60bb94",
          "success-l-3": "#72c2a0",
          "success-l-4": "#84caac",
          "success-l-5": "#96d2b8",
          "success-l-6": "#a8d9c4",
          "success-l-7": "#bae1d0",
          "success-l-8": "#cbe9dc",
          "success-l-9": "#ddf0e8",
          "success-t-1": "rgba(70,162,123,0.95)",
          "success-t-10": "rgba(70,162,123,0.5)",
          "success-t-11": "rgba(70,162,123,0.44999999999999996)",
          "success-t-12": "rgba(70,162,123,0.3999999999999999)",
          "success-t-13": "rgba(70,162,123,0.35)",
          "success-t-14": "rgba(70,162,123,0.3)",
          "success-t-15": "rgba(70,162,123,0.25)",
          "success-t-16": "rgba(70,162,123,0.2)",
          "success-t-17": "rgba(70,162,123,0.14999999999999986)",
          "success-t-18": "rgba(70,162,123,0.1)",
          "success-t-19": "rgba(70,162,123,0.05)",
          "success-t-2": "rgba(70,162,123,0.9)",
          "success-t-3": "rgba(70,162,123,0.85)",
          "success-t-4": "rgba(70,162,123,0.8)",
          "success-t-5": "rgba(70,162,123,0.75)",
          "success-t-6": "rgba(70,162,123,0.7)",
          "success-t-7": "rgba(70,162,123,0.65)",
          "success-t-8": "rgba(70,162,123,0.6)",
          "success-t-9": "rgba(70,162,123,0.55)",
          "tertiary": "#8B5691",
          "tertiary-d-1": "#7c4d81",
          "tertiary-d-10": "#000",
          "tertiary-d-11": "#000",
          "tertiary-d-12": "#000",
          "tertiary-d-13": "#000",
          "tertiary-d-14": "#000",
          "tertiary-d-15": "#000",
          "tertiary-d-16": "#000",
          "tertiary-d-17": "#000",
          "tertiary-d-18": "#000",
          "tertiary-d-19": "#000",
          "tertiary-d-2": "#6c4371",
          "tertiary-d-3": "#5d3a61",
          "tertiary-d-4": "#4e3051",
          "tertiary-d-5": "#3e2741",
          "tertiary-d-6": "#2f1d31",
          "tertiary-d-7": "#201421",
          "tertiary-d-8": "#100a11",
          "tertiary-d-9": "#010101",
          "tertiary-l-1": "#9a60a1",
          "tertiary-l-10": "#f5f0f6",
          "tertiary-l-11": "#fff",
          "tertiary-l-12": "#fff",
          "tertiary-l-13": "#fff",
          "tertiary-l-14": "#fff",
          "tertiary-l-15": "#fff",
          "tertiary-l-16": "#fff",
          "tertiary-l-17": "#fff",
          "tertiary-l-18": "#fff",
          "tertiary-l-19": "#fff",
          "tertiary-l-2": "#a470aa",
          "tertiary-l-3": "#ae80b4",
          "tertiary-l-4": "#b990bd",
          "tertiary-l-5": "#c3a0c7",
          "tertiary-l-6": "#cdb0d0",
          "tertiary-l-7": "#d7c0da",
          "tertiary-l-8": "#e1d0e3",
          "tertiary-l-9": "#ebe0ed",
          "tertiary-t-1": "rgba(139,86,145,0.95)",
          "tertiary-t-10": "rgba(139,86,145,0.5)",
          "tertiary-t-11": "rgba(139,86,145,0.44999999999999996)",
          "tertiary-t-12": "rgba(139,86,145,0.3999999999999999)",
          "tertiary-t-13": "rgba(139,86,145,0.35)",
          "tertiary-t-14": "rgba(139,86,145,0.3)",
          "tertiary-t-15": "rgba(139,86,145,0.25)",
          "tertiary-t-16": "rgba(139,86,145,0.2)",
          "tertiary-t-17": "rgba(139,86,145,0.14999999999999986)",
          "tertiary-t-18": "rgba(139,86,145,0.1)",
          "tertiary-t-19": "rgba(139,86,145,0.05)",
          "tertiary-t-2": "rgba(139,86,145,0.9)",
          "tertiary-t-3": "rgba(139,86,145,0.85)",
          "tertiary-t-4": "rgba(139,86,145,0.8)",
          "tertiary-t-5": "rgba(139,86,145,0.75)",
          "tertiary-t-6": "rgba(139,86,145,0.7)",
          "tertiary-t-7": "rgba(139,86,145,0.65)",
          "tertiary-t-8": "rgba(139,86,145,0.6)",
          "tertiary-t-9": "rgba(139,86,145,0.55)",
          "warning": "#c39243",
          "warning-d-1": "#b38539",
          "warning-d-10": "#050402",
          "warning-d-11": "#000",
          "warning-d-12": "#000",
          "warning-d-13": "#000",
          "warning-d-14": "#000",
          "warning-d-15": "#000",
          "warning-d-16": "#000",
          "warning-d-17": "#000",
          "warning-d-18": "#000",
          "warning-d-19": "#000",
          "warning-d-2": "#a07633",
          "warning-d-3": "#8d682d",
          "warning-d-4": "#795a27",
          "warning-d-5": "#664b21",
          "warning-d-6": "#533d1a",
          "warning-d-7": "#3f2f14",
          "warning-d-8": "#2c210e",
          "warning-d-9": "#191208",
          "warning-l-1": "#c99d56",
          "warning-l-10": "#fff",
          "warning-l-11": "#fff",
          "warning-l-12": "#fff",
          "warning-l-13": "#fff",
          "warning-l-14": "#fff",
          "warning-l-15": "#fff",
          "warning-l-16": "#fff",
          "warning-l-17": "#fff",
          "warning-l-18": "#fff",
          "warning-l-19": "#fff",
          "warning-l-2": "#cfa86a",
          "warning-l-3": "#d6b47d",
          "warning-l-4": "#dcbf90",
          "warning-l-5": "#e2caa4",
          "warning-l-6": "#e8d5b7",
          "warning-l-7": "#eee0ca",
          "warning-l-8": "#f4ecde",
          "warning-l-9": "#fbf7f1",
          "warning-t-1": "rgba(195,146,67,0.95)",
          "warning-t-10": "rgba(195,146,67,0.5)",
          "warning-t-11": "rgba(195,146,67,0.44999999999999996)",
          "warning-t-12": "rgba(195,146,67,0.3999999999999999)",
          "warning-t-13": "rgba(195,146,67,0.35)",
          "warning-t-14": "rgba(195,146,67,0.3)",
          "warning-t-15": "rgba(195,146,67,0.25)",
          "warning-t-16": "rgba(195,146,67,0.2)",
          "warning-t-17": "rgba(195,146,67,0.14999999999999986)",
          "warning-t-18": "rgba(195,146,67,0.1)",
          "warning-t-19": "rgba(195,146,67,0.05)",
          "warning-t-2": "rgba(195,146,67,0.9)",
          "warning-t-3": "rgba(195,146,67,0.85)",
          "warning-t-4": "rgba(195,146,67,0.8)",
          "warning-t-5": "rgba(195,146,67,0.75)",
          "warning-t-6": "rgba(195,146,67,0.7)",
          "warning-t-7": "rgba(195,146,67,0.65)",
          "warning-t-8": "rgba(195,146,67,0.6)",
          "warning-t-9": "rgba(195,146,67,0.55)",
        },
        "defaults": Object {
          "borderColor": "default-d-1",
          "colors": Array [
            "default-l-1",
            "default",
            "default-l-1",
          ],
          "gradientDirection": "0deg",
        },
        "fontSizes": Array [
          12,
          16,
          18,
          24,
          36,
          72,
        ],
        "gradients": undefined,
        "space": Array [
          0,
          6,
          12,
          18,
          24,
        ],
      }
    }
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "className": "sc-bdVaJa iquEsB",
    },
    "ref": null,
    "rendered": null,
    "type": "button",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "className": "sc-bdVaJa iquEsB",
      },
      "ref": null,
      "rendered": null,
      "type": "button",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;
